# opendag-agent

./: .gitignore  LICENSE  README.md  development.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: e1_campaign.py  e1_sim.py  e1b_stochastic.py  ncsim_crosscheck.py  run_p1.py
figures/: f4_makespan_distributions.py  f5_pareto.py  t2_ranking.py
opendag/: __init__.py  presets.py  viz.py
opendag/execute/: __init__.py  local.py
opendag/graphs/: __init__.py  model.py  topologies.py
opendag/profile/: __init__.py
opendag/schedule/: __init__.py  baselines.py  bridge.py  costs.py  executors.py  multiobjective.py  stochastic_eval.py
opendag/security/: __init__.py
tasks/: todo.md
tests/: conftest.py  test_constrained_wrapper.py  test_graphs.py  test_multiobjective.py  test_runner.py  test_schedule.py  test_stochastic_eval.py
