[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opendag-agent"
version = "0.0.1"
description = "Plan, schedule, execute, and audit multi-LLM-agent workflows as task graphs across heterogeneous edge, cloud, and hosted-API executors. SAGA plans, Wayline executes."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Autonomous Networks Research Group, University of Southern California" },
]
keywords = ["DAG", "scheduling", "LLM", "agents", "edge computing", "HEFT", "SAGA"]
dependencies = [
  "anrg-saga>=2.0.4",
  "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]
figures = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/ANRGUSC/opendag-agent"

[tool.setuptools.packages.find]
include = ["opendag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
